--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,10 @@
 .App {
   box-sizing: border-box;
   margin: 0px;
-  padding: 25px;
+  padding: 65px 25px;
   min-height: 100vh;
   background-color: rgb(220, 220, 230);
+  display: flex;
+  flex-direction: column;
+  gap: 45px;
 }
