--- a/src/styles/generic-section.css
+++ b/src/styles/generic-section.css
@@ -6,6 +6,19 @@
   display: flex;
   flex-direction: column;
 }
+.section .section {
+  border: solid 1px rgb(205, 205, 205);
+  box-shadow: none;
+}
 button {
   align-self: flex-end;
+}
+ul {
+  padding: 0px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+li {
+  list-style-type: none;
 }
