--- a/src/styles/generic-section.css
+++ b/src/styles/generic-section.css
@@ -27,3 +27,11 @@ ul {
 li {
   list-style-type: none;
 }
+.references {
+  position: relative;
+}
+.references .toggle {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
