--- a/src/styles/generic-section.css
+++ b/src/styles/generic-section.css
@@ -1,5 +1,5 @@
 .section {
-  padding: 15px;
+  padding: 15px 25px;
   background-color: white;
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.15);
   border-radius: 5px;
@@ -9,6 +9,11 @@
 .section .section {
   border: solid 1px rgb(205, 205, 205);
   box-shadow: none;
+}
+.section h2 {
+  cursor: pointer;
+  margin: 0px;
+  padding: 10px 0px;
 }
 button {
   align-self: flex-end;
