--- a/src/styles/generic-section.css
+++ b/src/styles/generic-section.css
@@ -1,27 +1,43 @@
-.section {
-  padding: 15px 25px;
+:root {
+  --light-gray: rgb(225, 225, 235);
+  --medium-gray: darkgray;
+  --main-color: rgb(116, 183, 90);
+}
+
+.section,
+.multi-section {
+  padding: 25px 50px;
+  padding-bottom: 35px;
   background-color: white;
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.15);
   border-radius: 5px;
   display: flex;
   flex-direction: column;
 }
-.section .section {
+.section.collapsed {
+  padding-bottom: 25px;
+}
+.multi-section .section {
   border: solid 1px rgb(205, 205, 205);
   box-shadow: none;
+  padding-bottom: 25px;
 }
 .section h2 {
   cursor: pointer;
   margin: 0px;
   padding: 10px 0px;
+  color: dimgray;
 }
-button {
-  align-self: flex-end;
+.spacer {
+  background-color: var(--main-color);
+  position: relative;
+  /* left: -2.5%; */
+  width: 100%;
+  height: 2px;
+  border-radius: 5px;
 }
-.button-div {
-  display: flex;
-  justify-content: end;
-  align-items: center;
+.multi-section .section .spacer {
+  display: none;
 }
 ul {
   padding: 0px;
