--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,108 @@
+:root {
+  --light-gray: rgb(225, 225, 235);
+  --medium-gray: darkgray;
+  --main-color: rgb(47, 190, 104);
+  --main-color-light: rgb(137, 224, 172);
+  --accent-color: rgb(82, 99, 195);
+}
 
 .App {
-  box-sizing: border-box;
   margin: 0px;
-  padding: 65px 10vw;
   min-height: 100vh;
   background-color: rgb(220, 220, 230);
+  padding-bottom: 150px;
+}
+.content-div {
+  position: relative;
+  box-sizing: border-box;
+  padding: 65px 10vw;
+  padding-top: 0px;
   display: flex;
   flex-direction: column;
   gap: 45px;
+  z-index: 1;
+}
+#next-button {
+  align-self: center;
+  background-color: var(--accent-color);
+  border-color: var(--accent-color);
+  padding: 15px 40px;
+}
+#previous-button {
+  align-self: center;
+  background-color: transparent;
+  color: darkgray;
+  border: none;
+  margin-top: -25px;
+  font-size: 15px;
+}
+.header-div {
+  position: relative;
+  background-color: var(--main-color);
+  width: 100%;
+  height: 500px;
+  overflow: hidden;
+  margin-bottom: -225px;
+  z-index: 0;
+}
+.masking-div {
+  position: absolute;
+  bottom: -300px;
+  left: -25vw;
+  background-color: rgb(220, 220, 230);
+  width: 150vw;
+  height: 450px;
+  transform: rotate(-6deg);
+}
+.logo {
+  color: white;
+  font-size: 28px;
+  position: absolute;
+  top: 20px;
+  left: 50px;
+  margin: 0px;
+}
+.header-div h1 {
+  position: absolute;
+  left: calc(50% - 150px);
+  bottom: 300px;
+  color: white;
+  font-size: 40px;
+  width: 300px;
+  text-align: center;
+}
+.progress-bar {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  left: 25%;
+  bottom: 260px;
+}
+.progress-circle {
+  position: relative;
+  z-index: 1;
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  background-color: var(--main-color-light);
+}
+.progress-line {
+  position: absolute;
+  width: 100%;
+  height: 8px;
+  top: 15px;
+  background-color: var(--main-color-light);
+  border-radius: 10px;
+  overflow: hidden;
+}
+.progress-line-fill {
+  position: absolute;
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  background-color: var(--accent-color);
+}
+.complete {
+  background-color: var(--accent-color);  
 }
