--- a/src/styles/input-styling.css
+++ b/src/styles/input-styling.css
@@ -22,15 +22,24 @@ label {
   user-select: none;
   font-size: 15px;
 }
-input {
+input, textarea {
   border: solid 2px var(--light-gray);
   outline: none;
   border-radius: 5px;
   box-sizing: border-box;
   padding: 12.5px;
   width: 100%;
+  font-family: inherit;
   font-size: 16px;
   color: dimgray;
+}
+textarea {
+  grid-column: span 2;
+  height: 175px;
+  resize: vertical;
+}
+.multi-section textarea {
+  height: 125px;
 }
 input::placeholder {
   font-family: inherit;
