--- a/src/styles/generic-section.css
+++ b/src/styles/generic-section.css
@@ -14,11 +14,23 @@
 .section.collapsed {
   padding-bottom: 25px;
 }
+.section.saved p {
+  margin: 0px;
+  padding-bottom: 5px;
+  color: gray;
+}
 .multi-section .section {
   border: solid 2px var(--light-gray);
   box-shadow: none;
   padding-bottom: 25px;
   margin-bottom: 10px;
+}
+.multi-section .section.saved {
+  padding: 15px 0px;
+  border-color: transparent;
+  border: none;
+  border-bottom: solid 2px var(--light-gray);
+  border-radius: 0px;
 }
 .section h2,
 .multi-section h2 {
@@ -27,10 +39,15 @@
   padding: 10px 0px;
   color: dimgray;
 }
+.section h3,
+.multi-section h3 {
+  margin: 0px;
+  padding: 5px 0px;
+  color: dimgray;
+}
 .spacer {
   background-color: var(--main-color);
   position: relative;
-  /* left: -2.5%; */
   width: 100%;
   height: 2px;
   border-radius: 5px;
