--- a/src/App.css
+++ b/src/App.css
@@ -22,27 +22,40 @@
   gap: 45px;
   z-index: 1;
 }
-#next-button {
+#next-button, #download-button {
   align-self: center;
   background-color: var(--accent-color);
   border-color: var(--accent-color);
-  padding: 15px 40px;
+  padding: 10px 40px;
+  margin-top: 15px;
 }
 #previous-button {
   align-self: center;
   background-color: transparent;
   color: darkgray;
   border: none;
-  margin-top: -25px;
+  margin-top: -35px;
   font-size: 15px;
+}
+#download-button {
+  padding: 10px 25px;
+}
+#next-button, #previous-button, #download-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} 
+#next-button p, #previous-button p, #download-button p {
+  min-width: max-content;
+  margin: 0px;
 }
 .header-div {
   position: relative;
   background-color: var(--main-color);
   width: 100%;
-  height: 500px;
+  height: 525px;
   overflow: hidden;
-  margin-bottom: -225px;
+  margin-bottom: -235px;
   z-index: 0;
 }
 .masking-div {
@@ -65,7 +78,7 @@
 .header-div h1 {
   position: absolute;
   left: calc(50% - 150px);
-  bottom: 300px;
+  bottom: 325px;
   color: white;
   font-size: 40px;
   width: 300px;
@@ -75,9 +88,9 @@
   position: absolute;
   display: flex;
   justify-content: space-between;
-  width: 50%;
-  left: 25%;
-  bottom: 260px;
+  width: 480px;
+  left: calc(50% - 240px);
+  bottom: 290px;
 }
 .progress-circle {
   position: relative;
@@ -86,6 +99,15 @@
   height: 38px;
   border-radius: 50%;
   background-color: var(--main-color-light);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.progress-circle p {
+  position: absolute;
+  top: 65%;
+  color: white;
 }
 .progress-line {
   position: absolute;
