--- a/src/styles/generic-section.css
+++ b/src/styles/generic-section.css
@@ -32,9 +32,14 @@
   border-bottom: solid 2px var(--light-gray);
   border-radius: 0px;
 }
+.section-header-div {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+}
 .section h2,
 .multi-section h2 {
-  cursor: pointer;
   margin: 0px;
   padding: 10px 0px;
   color: dimgray;
