--- a/src/styles/input-styling.css
+++ b/src/styles/input-styling.css
@@ -61,6 +61,7 @@ input:focus-visible::placeholder {
   color: transparent;
 }
 button {
+  position: relative;
   align-self: flex-end;
   outline: none;
   box-sizing: border-box;
@@ -94,11 +95,21 @@ button {
 .new-item-button p {
   margin: 0px 10px;
 }
+.save-button {
+  padding: 8px 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+.save-button p {
+  margin: 0px;
+}
 .delete-button,
 .edit-button {
   background-color: transparent;
   color: gray;
-  border-color: var(--light-gray);
+  border: none;
   position: absolute;
   top: 10px;
   right: 10px;
